--- a/ex3/posts/templates/form.html
+++ b/ex3/posts/templates/form.html
@@ -13,6 +13,7 @@
     </nav>
     <section class="container">
         <h2>Cadastrar Post</h2>
+        <h3>Nome do Autor</h3>
         <form method="POST">
             {% csrf_token %}
             <div class="form-group">
