--- a/ex3/posts/templates/index.html
+++ b/ex3/posts/templates/index.html
@@ -17,6 +17,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ post.titulo }}</h5>
                 <p class="card-text">{{ post.conteudo }}</p>
+                <h6 class="card-name">{{post.nome}}</h6>
             </div>
         </div>
         {% endfor %}
